change: login and register page modified
- Modified login and register page
- Added new logo to this app

--- a/templates/register.html
+++ b/templates/register.html
@@ -3,26 +3,36 @@
 <section class="container">
     <div class="h-100 d-flex align-items-center justify-content-center row min-vh-100 user-select-none">
         <div class="py-3 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
-            <form class="user-register-form needs-validation" method="post" autocomplete="off">
+            {% if err_msg != None: %}
+            <div class="alert alert-danger alert-dismissible fade show">
+                <i class="bi bi-exclamation-circle me-2"></i><b class="fw-semibold">Failed to register.</b> Invalid credentials!
+                <button type="button" class="btn-close shadow-none" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endif %}
+            <form class="user-register-form needs-validation" method="post" autocomplete="off" action="/register">
                 <div class="form-control p-4 bg-body-tertiary">
-                    <img src="/assets/brand/photogram-logo.png" alt="logo" class="img-fluid mx-auto d-block mb-2" width="63" height="63">
-                    <h4 class="fw-light text-center mb-4">Online retail system</h4>
+                    <img src="{{url_for('static', filename='eazycart-logo.svg')}}" alt="logo" class="img-fluid mx-auto d-block mb-2" width="63" height="63">
+                    <h4 class="fw-light text-center mb-4">Eazycart</h4>
                     <hr class="mb-3">
                     <h5 class="fw-semi-bold mb-4">Register</h5>
-                    <label for="fullname" class="form-label">Full name</label>
-                    <input type="text" id="fullname" name="fullname" class="form-control bg-transparent" spellcheck="false" required="">
-                    <div class="invalid-feedback"></div>
-                    <label for="username" class="form-label mt-3">Username</label>
-                    <input type="text" id="username" name="username" class="form-control text-lowercase bg-transparent" spellcheck="false" required="">
-                    <div class="invalid-feedback"></div>
+                    <div class="form-group row">
+                        <div class="col">
+                            <label for="fname" class="form-label">Firstname</label>
+                            <input type="text" id="fname" class="form-control bg-transparent" name="fname" aria-label="First name">
+                        </div>
+                        <div class="col">
+                            <label for="lname" class="form-label">Lastname</label>
+                            <input type="text" id="lname" class="form-control bg-transparent" name="lname" aria-label="Last name">
+                        </div>
+                    </div>
                     <label for="email" class="form-label mt-3">Email address</label>
-                    <input type="email" id="email" name="email_address" class="form-control bg-transparent" spellcheck="false" required="">
+                    <input type="email" id="email" name="email" class="form-control bg-transparent" spellcheck="false" required="">
                     <div class="invalid-feedback"></div>
                     <label for="password" class="form-label mt-3">Password</label>
-                    <input type="password" id="password" name="password" class="form-control bg-transparent" required="">
+                    <input type="password" id="password" name="pass" class="form-control bg-transparent" required="">
                     <div class="invalid-feedback"></div>
                     <div class="d-grid mt-4 mb-2">
-                        <button type="submit" class="btn btn-primary btn-register" disabled="">Register now!</button>
+                        <button type="submit" class="btn btn-primary btn-register">Register now!</button>
                     </div>
                     <p class="text-center text-muted mb-0">Do you already have an account? <a href="/login">Login
                                 now</a>.</p>
