--- a/templates/login.html
+++ b/templates/login.html
@@ -3,14 +3,20 @@
 <section class="container">
     <div class="h-100 d-flex align-items-center justify-content-center row user-select-none min-vh-100">
         <div class="py-3 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
-            <form class="user-login-form" method="post" autocomplete="off">
+            {% if err_msg != None: %}
+            <div class="alert alert-danger alert-dismissible fade show">
+                <i class="bi bi-exclamation-circle me-2"></i><b class="fw-semibold">Invalid credentials!</b> Please try again.
+                <button type="button" class="btn-close shadow-none" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endif %}
+            <form class="user-login-form" method="post" autocomplete="off" action="/login">
                 <div class="form-control p-4 bg-body-tertiary">
-                    <img src="/assets/brand/photogram-logo.png" alt="logo" class="img-fluid mx-auto d-block mb-2" width="63" height="63">
-                    <h4 class="fw-light text-center mb-4">Online retail system</h4>
+                    <img src="{{url_for('static', filename='eazycart-logo.svg')}}" alt="logo" class="img-fluid mx-auto d-block mb-2" width="63" height="63">
+                    <h4 class="fw-light text-center mb-4">Eazycart</h4>
                     <hr class="mb-4">
                     <h5 class="fw-semi-bold mb-4">Login</h5>
-                    <label for="user" class="form-label">Username or email</label>
-                    <input type="text" id="user" name="user" class="form-control mb-3 bg-transparent" required="">
+                    <label for="user" class="form-label">Email address</label>
+                    <input type="email" id="user" name="email" class="form-control mb-3 bg-transparent" required="">
                     <label for="pass" class="form-label">Password</label>
                     <div class="input-group mb-3">
                         <input type="password" id="pass" name="pass" class="form-control bg-transparent" required="">
@@ -33,7 +39,7 @@
                     <div class="d-grid">
                         <button type="submit" class="btn btn-primary btn-login mb-3">Login now!</button>
                     </div>
-                    <p class="text-center text-muted">Want to join Photogram? <a href="/register">Register
+                    <p class="text-center text-muted">Want to join Eazycart? <a href="/register">Register
                             now</a>.</p>
                 </div>
             </form>
