change: Updated templates
- Added favicon to all pages
- Header will be included if logged in
- Modified login and register page structure
- Added separate page title to each templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,7 @@
 {% include 'layouts/head.html' %}
 
 <body>
-
-    {% include 'layouts/header.html' %} {% block body %} {% endblock %} {% include 'layouts/js_includes.html' %}
+    {% if header_inc != False: %} {% include 'layouts/header.html' %} {% endif %} {% block body %} {% endblock %} {% include 'layouts/js_includes.html' %}
 
 
 </body>
