--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -20,8 +20,7 @@
             </form>
 
             <div class="text-end">
-                <a href="/login" type="button" class="btn btn-outline-light me-2">Login</a>
-                <a href="/register" type="button" class="btn btn-warning">Sign-up</a>
+                <a href="/logout" type="button" class="btn btn-danger">Logout</a>
             </div>
         </div>
     </div>
