--- a/templates/register.html
+++ b/templates/register.html
@@ -18,11 +18,11 @@
                     <div class="form-group row">
                         <div class="col">
                             <label for="fname" class="form-label">Firstname</label>
-                            <input type="text" id="fname" class="form-control bg-transparent" name="fname" aria-label="First name">
+                            <input type="text" id="fname" class="form-control bg-transparent" name="fname" aria-label="First name" required="">
                         </div>
                         <div class="col">
                             <label for="lname" class="form-label">Lastname</label>
-                            <input type="text" id="lname" class="form-control bg-transparent" name="lname" aria-label="Last name">
+                            <input type="text" id="lname" class="form-control bg-transparent" name="lname" aria-label="Last name" required="">
                         </div>
                     </div>
                     <label for="email" class="form-label mt-3">Email address</label>
