--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -1,27 +1,36 @@
-<header class="p-3 text-bg-dark">
-    <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
-            </a>
+<nav class="navbar navbar-expand-md p-2 border-bottom">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/"><img src="{{url_for('static', filename='eazycart-logo.svg')}}" alt="eazycart logo" class="img-fluid me-2" width="26" height="26">Eazycart</a>
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+        <div class="navbar-collapse collapse" id="navbarsExample04">
+            <ul class="navbar-nav mb-2 mb-md-0 ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/cart"><i class="bi bi-cart-plus me-1"></i>Cart</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/orders"><i class="bi bi-bag me-1"></i>Orders</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/wishlist"><i class="bi bi-list-check me-1"></i>Wishlist</a>
+                </li>
             </ul>
-
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
-            </form>
-
-            <div class="text-end">
-                <a href="/logout" type="button" class="btn btn-danger">Logout</a>
+            <div class="ms-2 d-flex align-items-center">
+                <div class="flex-shrink-0 dropdown">
+                    <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle fs-6" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="https://github.com/mdo.png" alt="mdo" width="26" height="26" class="rounded-circle">
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end mt-2">
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-person-circle me-2"></i>My profile</a></li>
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-pencil-square me-2"></i>Edit profile</a></li>
+                        <li><a class="dropdown-item" href="#"><i class="bi bi-gear me-2"></i>Settings</a></li>
+                        <li class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="/logout"><i class="bi bi-box-arrow-left me-2"></i>Log out</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-</header>
+</nav>
