--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,27 @@
 {% extends 'base.html' %} {% block body %}
-
-
-<p>This is a Flask application.</p>
+<div class="container my-5">
+    <label class="mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - Products</label>
+    <h4 class="fw-semibold fs-3">Products</h4>
+    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+        {% for p in products %}
+        <div class="col mb-5">
+            <div class="card h-100 border">
+                <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="...">
+                <div class="card-body p-4">
+                    <div class="text-center">
+                        <h5 class="fw-bolder">{{p[1]}}</h5>
+                        Price: ₹{{p[2]}}
+                        <label>{{p[4]}}</label>
+                    </div>
+                </div>
+                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 
 
 {% endblock %}
