--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -1,22 +1,20 @@
-<nav class="navbar navbar-expand-md p-2 border-bottom">
+<nav class="navbar navbar-expand-md p-3 border-bottom shadow">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="{{url_for('static', filename='eazycart-logo.svg')}}" alt="eazycart logo" class="img-fluid me-2" width="26" height="26">Eazycart</a>
-        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand fs-4" href="/"><img src="{{url_for('static', filename='eazycart-logo.svg')}}" alt="eazycart logo" class="img-fluid me-2" width="30" height="26">Eazycart</a>
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="navbar-collapse collapse" id="navbarsExample04">
-            <ul class="navbar-nav mb-2 mb-md-0 ms-auto">
+        <div class="navbar-collapse collapse" id="navbar">
+            <ul class="navbar-nav fs-5 mb-md-0 ms-auto">
+                {% for item in ['Cart', 'Orders', 'Wishlist'] %}
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/cart"><i class="bi bi-cart-plus me-1"></i>Cart</a>
+                    <a class="nav-link{% if page_name == item %} active{% endif %}" href="/{{ item|lower }}"><i
+                class="bi {% if item == 'Cart' %}bi-cart-plus{% elif item == 'Orders' %}bi-bag{% elif item == 'Wishlist' %}bi-list-task{% endif %} me-1"></i>{{ item }}</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/orders"><i class="bi bi-bag me-1"></i>Orders</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/wishlist"><i class="bi bi-list-check me-1"></i>Wishlist</a>
-                </li>
+                {% endfor %}
             </ul>
+
             <div class="ms-2 d-flex align-items-center">
                 <div class="flex-shrink-0 dropdown">
                     <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle fs-6" data-bs-toggle="dropdown" aria-expanded="false">
