--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1,7 +1,84 @@
 {% extends 'base.html' %} {% block body %}
 
 <div class="container my-5">
-    <label class="mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - Orders</label>
-    <h4 class="fw-semibold fs-3">Orders</h4>
+    <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - Orders</label>
+    <h4 class="fw-semibold display-6">Your Orders</h4>
+    <table class="table table-hover">
+        <thead>
+            <tr class="text-center">
+                <th scope="col">Order #</th>
+                <th scope="col">Date</th>
+                <th scope="col">Total</th>
+                <th scope="col">Status</th>
+                <th scope="col">Action</th>
+            </tr>
+        </thead>
+        <tbody class="table-group-divider">
+            <tr class="text-center">
+                <th scope="row"># 1421</th>
+                <td>28/11/2023</td>
+                <td>₹ 1542.00</td>
+                <td><span class="badge rounded-pill text-bg-danger">Pending</span>
+                </td>
+                <td>
+                    <a role="button" class="btn btn-sm btn-primary"><i class="bi bi-eye"></i></a>
+                    <a role="button" class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></a>
+                </td>
+            </tr>
+            <tr class="text-center">
+                <th scope="row"># 2423</th>
+                <td>22/08/2023</td>
+                <td>₹ 4211.32</td>
+                <td><span class="badge rounded-pill text-bg-success">Delivered</span>
+                </td>
+                <td>
+                    <a role="button" class="btn btn-sm btn-primary"><i class="bi bi-eye"></i></a>
+                    <a role="button" class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div class="py-5 py-lg-6 bg-gray">
+    <div class="container">
+        <div class="row">
+            <div class="py-4 col-lg-3 col-sm-6">
+                <div class="d-flex align-items-center justify-content-center">
+                    <i class="bi bi-truck my-auto mx-3 fs-3"></i>
+                    <div>
+                        <h6 class="text-sm mb-1">Free shipping &amp; return</h6>
+                        <p class="text-muted fw-light text-sm mb-0">Free Shipping over ₹2000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="py-4 col-lg-3 col-sm-6">
+                <div class="d-flex align-items-center justify-content-center">
+                    <i class="bi bi-coin my-auto mx-3 fs-3"></i>
+                    <div>
+                        <h6 class="text-sm mb-1">Money back guarantee</h6>
+                        <p class="text-muted fw-light text-sm mb-0">30 Days Money Back Guarantee</p>
+                    </div>
+                </div>
+            </div>
+            <div class="py-4 col-lg-3 col-sm-6">
+                <div class="d-flex align-items-center justify-content-center">
+                    <i class="bi bi-percent my-auto mx-3 fs-3"></i>
+                    <div>
+                        <h6 class="text-sm mb-1">Best prices</h6>
+                        <p class="text-muted fw-light text-sm mb-0">Always the best prices</p>
+                    </div>
+                </div>
+            </div>
+            <div class="py-4 col-lg-3 col-sm-6">
+                <div class="d-flex align-items-center justify-content-center">
+                    <i class="bi bi-person my-auto mx-3 fs-3"></i>
+                    <div>
+                        <h6 class="text-sm mb-1">+91 75398 12346</h6>
+                        <p class="text-muted fw-light text-sm mb-0">24/7 Available Support</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
