--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,17 +1,15 @@
 {% extends 'base.html' %} {% block body %}
 
 <div class="container my-5">
-    <label class="mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - Cart</label>
-    <h4 class="fw-semibold fs-3">Cart</h4>
+    <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - Shopping Cart</label>
+    <h4 class="fw-semibold display-6">Shopping Cart</h4>
     <div>
         <p class="lead text-muted">You have 6 items in your cart.</p>
-        <p class="lead text-muted">For the checkout, <a href="/checkout">click here</a>.</p>
     </div>
     <div class="mb-5 row">
         <div class="pe-xl-5 col-lg-8">
             <div class="cart mb-5">
                 <div class="cart-body">
-                    {% for _ in range(1, 6): %}
                     <div class="cart-item">
                         <div class="d-flex align-items-center text-start text-md-center row">
                             <div class="col-md-5 col-12"><a class="cart-remove close mt-3 d-md-none" href="#"><svg aria-hidden="true"
@@ -64,11 +62,10 @@
                             </div>
                         </div>
                     </div>
-                    {% endfor %}
                 </div>
             </div>
             <div class="d-flex justify-content-between flex-column flex-lg-row mb-5 mb-lg-0">
-                <a role="button" tabindex="0" href="/category-full" class="btn btn-outline-primary rounded-0"><i class="bi bi-arrow-left me-2"></i>Continue Shopping</a>
+                <a role="button" tabindex="0" href="/" class="btn btn-outline-primary rounded-0"><i class="bi bi-arrow-left me-2"></i>Continue Shopping</a>
                 <a role="button" tabindex="0" href="#" class="btn btn-outline-primary rounded-0"><i class="bi bi-arrow-repeat"></i>Update cart</a>
             </div>
         </div>
@@ -102,7 +99,7 @@
                     </table>
                 </div>
                 <div class="overflow-hidden p-0 card-footer">
-                    <div class="d-grid"><a role="button" tabindex="0" href="/checkout1" class="py-3 btn btn-outline-primary border-0 rounded-top-0">Proceed to Checkout <i class="bi bi-arrow-right"></i></a></div>
+                    <div class="d-grid"><a role="button" tabindex="0" href="/checkout" class="py-3 btn btn-outline-primary border-0 rounded-top-0">Proceed to Checkout <i class="bi bi-arrow-right"></i></a></div>
                 </div>
             </div>
         </div>
