--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                 <img class="img-fluid h-50 rounded" src="{{ url_for('static', filename='products/' + p[6]) }}" alt="{{p[6]}}">
                 <div class="card-body px-4">
                     <div class="text-center">
-                        <h5 class="fw-bolder">{{p[1]}}</h5>
+                        <h5 class="fw-bold">{{p[1]}}</h5>
                         <p class="fw-semibold">Price: ₹{{p[2]}}</p>
                         <label class="text-start">{{p[4]}}</label>
                     </div>
@@ -27,12 +27,13 @@
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                     {% if p[3] > 15: %}
                     <label class="text-success">In stock</label> {% elif p[3]
-                    < 15 %} <label class="text-danger">Only {{p[3]}} stocks left!</label>
-                        {% endif %}
+                    < 15: %} <label class="text-danger">Only {{p[3]}} stocks left!</label>
+                        {% else: %}
+                        <label class="text-danger">Out of stock!</label> {% endif %}
                         <p class="text-start mt-2">Category: <label class="fw-semibold">{{p[5]}}</label></p>
                         <div class="d-flex">
-                            <input class="form-control w-50 me-2" type="number" value="1">
-                            <a role="button" class="btn btn-outline-secondary w-100" data-id="{{p[0]}}"><i class="bi bi-cart-plus me-2"></i>Add to cart</a>
+                            <input class="product-quantity form-control w-50 me-2" type="number" value="1" min="1" max="{{p[3]}}">
+                            <a role="button" class="btn btn-outline-secondary btn-add-cart w-100" data-id="{{p[0]}}"><i class="bi bi-cart-plus me-2"></i>Add to cart</a>
                         </div>
                         <a role="button" class="btn btn-outline-secondary d-block mt-2" data-id="{{p[0]}}"><i class="bi bi-suit-heart me-2"></i>Add to Wishlist</a>
                 </div>
