change: Persisting changes in view
The products added to cart will be displayed as added even after reload

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
     <hr class="mb-4">
     <div class="row gx-3 gx-lg-4 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
         {% for p in products %}
+
         <div class="col mb-3">
             <div class="card h-100 border shadow">
                 <img class="img-fluid h-50 rounded" src="{{ url_for('static', filename='products/' + p[6]) }}" alt="{{p[6]}}">
@@ -32,8 +33,11 @@
                         <label class="text-danger">Out of stock!</label> {% endif %}
                         <p class="text-start mt-2">Category: <label class="fw-semibold">{{p[5]}}</label></p>
                         <div class="d-flex">
-                            <input class="product-quantity form-control w-50 me-2" type="number" value="1" min="1" max="{{p[3]}}">
-                            <a role="button" class="btn btn-outline-secondary btn-add-cart w-100" data-id="{{p[0]}}"><i class="bi bi-cart-plus me-2"></i>Add to cart</a>
+                            <input class="product-quantity form-control w-50 me-2" type="number" value="1" min="1" max="{{p[3]}}"> {% if p[0] in inCart %}
+                            <a role="button" class="btn btn-secondary btn-add-cart w-100" data-id="{{p[0]}}"><i class="bi bi-check2 me-2"></i>Added to cart</a> {% else %}
+                            <a role="button" class="btn btn-outline-secondary btn-add-cart w-100" data-id="{{p[0]}}"><i
+                                    class="bi bi-cart-plus me-2"></i>Add to cart</a> {% endif %}
+
                         </div>
                         <a role="button" class="btn btn-outline-secondary d-block mt-2" data-id="{{p[0]}}"><i class="bi bi-suit-heart me-2"></i>Add to Wishlist</a>
                 </div>
