change: removed quantity option from home

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,10 @@
                         <label class="text-danger">Out of stock!</label> {% endif %}
                         <p class="text-start mt-2">Category: <label class="fw-semibold">{{p[5]}}</label></p>
                         <div class="d-flex">
-                            <input class="product-quantity form-control w-50 me-2" type="number" value="1" min="1" max="{{p[3]}}"> {% if p[0] in inCart %}
+                            {% if p[0] in inCart %}
                             <a role="button" class="btn btn-secondary btn-add-cart w-100" data-id="{{p[0]}}"><i class="bi bi-check2 me-2"></i>Added to cart</a> {% else %}
-                            <a role="button" class="btn btn-outline-secondary btn-add-cart w-100" data-id="{{p[0]}}"><i
-                                    class="bi bi-cart-plus me-2"></i>Add to cart</a> {% endif %}
-
+                            <a role="button" class="btn btn-outline-secondary btn-add-cart w-100" data-id="{{p[0]}}">
+                                <i class="bi bi-cart-plus me-2"></i>Add to cart</a> {% endif %}
                         </div>
                         <a role="button" class="btn btn-outline-secondary d-block mt-2" data-id="{{p[0]}}"><i class="bi bi-suit-heart me-2"></i>Add to Wishlist</a>
                 </div>
