--- a/templates/cart.html
+++ b/templates/cart.html
@@ -4,32 +4,24 @@
     <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - Shopping Cart</label>
     <h4 class="fw-semibold display-6">Shopping Cart</h4>
     <div>
-        <p class="lead text-muted">You have 6 items in your cart.</p>
+        <p class="lead text-muted">You have {{cartItems|length}} items in your cart.</p>
     </div>
     <div class="mb-5 row">
-        <div class="pe-xl-5 col-lg-8">
+        <div class="pe-xl-5 {% if cartItems|length == 0 %}col-lg-12 my-5{% else %} col-lg-8 {% endif %}">
             <div class="cart mb-5">
                 <div class="cart-body">
-                    <div class="cart-item">
+                    {% if cartItems|length > 0 %}
+                    <hr> {% endif %} {% for item in cartItems: %}
+                    <div class="cart-item my-3">
                         <div class="d-flex align-items-center text-start text-md-center row">
-                            <div class="col-md-5 col-12"><a class="cart-remove close mt-3 d-md-none" href="#"><svg aria-hidden="true"
-                                        focusable="false" data-prefix="fas" data-icon="times" class="svg-inline--fa fa-times fa-w-11 "
-                                        role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512">
-                                        <path fill="currentColor"
-                                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z">
-                                        </path>
-                                    </svg></a>
-                                <div class="d-flex align-items-center"><a href="/tops-blouses/white-tee"><span
-                                            style="box-sizing: border-box; display: inline-block; overflow: hidden; width: initial; height: initial; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"><span
-                                                style="box-sizing: border-box; display: block; width: initial; height: initial; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"><img
-                                                    alt="" aria-hidden="true" src="https://dummyimage.com/150x200/000/fff"
-                                                    style="display: block; max-width: 100%; width: initial; height: initial; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"></span><img
-                                                alt="product" src="https://dummyimage.com/150x200/000/fff" decoding="async"
-                                                data-nimg="intrinsic" class="cart-item-img"
-                                                style="position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
-                                                srcset="https://dummyimage.com/150x200/000/fff"><noscript></noscript></span></a>
-                                    <div class="cart-title text-start"><a class="text-dark link-animated" href="/tops-blouses/white-tee"><strong>White Tee</strong></a><br><span class="text-muted text-sm">Size: Large</span><br><span class="text-muted text-sm">Colour:
-                                            Green</span></div>
+                            <div class="col-md-5 col-12">
+                                <a class="cart-remove close mt-3 d-md-none" href="#"></a>
+                                <div class="d-flex align-items-center">
+                                    <a href="/products/{{item[0]}}"><img alt="{{item[6]}}" src="{{ url_for('static', filename='products/' + item[6]) }}" width="80"> </a>
+                                    <div class="cart-title text-start ms-3">
+                                        <a class="text-body text-decoration-none" href="/products/{{item[0]}}"><strong>{{item[1]}}</strong>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="mt-4 mt-md-0 col-md-7 col-12">
@@ -37,7 +29,7 @@
                                     <div class="col-md-3">
                                         <div class="row">
                                             <div class="d-md-none text-muted col-6">Price per item</div>
-                                            <div class="text-end text-md-center col-md-12 col-6">$40</div>
+                                            <div class="text-end text-md-center col-md-12 col-6">₹ {{item[2]}}</div>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
@@ -51,24 +43,43 @@
                                     <div class="col-md-3">
                                         <div class="row">
                                             <div class="d-md-none text-muted col-6">Total price</div>
-                                            <div class="text-end text-md-center col-md-12 col-6">$40.00</div>
+                                            <div class="text-end text-md-center col-md-12 col-6">₹ {{item[2]}}</div>
                                         </div>
                                     </div>
-                                    <div class="d-none d-md-block text-center col-2"><a class="cart-remove text-muted" href="#"><svg
-                                                class="svg-icon w-2rem h-2rem svg-icon-light">
-                                                <use xlink:href="#close-1"></use>
-                                            </svg></a></div>
+                                    <div class="d-none d-md-block text-center col-2">
+                                        <a role="button" class="cart-remove text-muted btn"><i class="bi bi-x"></i>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <hr>
                     </div>
+                    {% endfor %} {% if cartItems|length == 0 %}
+                    <div class="my-3">
+                        <div class="d-flex align-items-center justify-content-center mb-3">
+                            <div class="empty-cart text-body-tertiary">
+                                <i class="bi bi-cart-x display-1"></i>
+                            </div>
+                            <div class="empty-cart-info text-body-tertiary ms-3 mt-3">
+                                <h4 class="fw-normal mb-1">Cart is empty</h4>
+                                <p class="lead">Add items to your cart!</p>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center justify-content-center mt-4">
+                            <a role="button" class="btn btn-sm btn-outline-secondary rounded-0" href="/"><i class="bi bi-arrow-left me-2"></i>Continue shopping</a>
+                        </div>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
-            <div class="d-flex justify-content-between flex-column flex-lg-row mb-5 mb-lg-0">
+            <div class="d-flex justify-content-between flex-column flex-lg-row mb-5 mb-lg-0 mt-auto">
+                {% if cartItems|length > 0 %}
                 <a role="button" tabindex="0" href="/" class="btn btn-outline-primary rounded-0"><i class="bi bi-arrow-left me-2"></i>Continue Shopping</a>
-                <a role="button" tabindex="0" href="#" class="btn btn-outline-primary rounded-0"><i class="bi bi-arrow-repeat"></i>Update cart</a>
+                <a role="button" tabindex="0" href="#" class="btn btn-outline-primary rounded-0"><i class="bi bi-arrow-repeat me-2"></i>Update cart</a> {% endif %}
             </div>
         </div>
+        {% if cartItems|length > 0 %}
         <div class="col-lg-4">
             <div class="mb-5 card shadow">
                 <div class="card-header">
@@ -103,6 +114,7 @@
                 </div>
             </div>
         </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
