--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,25 @@
 {% include 'layouts/head.html' %}
 
 <body>
-    {% if header_inc != False: %} {% include 'layouts/header.html' %} {% endif %} {% block body %} {% endblock %} {% include 'layouts/js_includes.html' %}
+    {% if header_inc != False: %} {% include 'layouts/header.html' %} {% endif %} {% block body %} {% endblock %}
+
+    <div id="modalsGarbage">
+        <div class="modal fade user-select-none" data-bs-backdrop="static" id="dummy-dialog-modal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content blur">
+                    <div class="modal-header">
+                        <h4 class="modal-title"></h4>
+                    </div>
+                    <div class="modal-body">
+                    </div>
+                    <div class="modal-footer">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {% include 'layouts/js_includes.html' %}
 
 
 </body>
