feat: Remove items from cart page

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -14,17 +14,17 @@
                     <hr> {% endif %} {% for item in cartItems: %}
                     <div class="cart-item my-3">
                         <div class="d-flex align-items-center text-start text-md-center row">
-                            <div class="col-md-5 col-12">
+                            <div class="col-md-5 col-12 product-info-section">
                                 <a class="cart-remove close mt-3 d-md-none" href="#"></a>
                                 <div class="d-flex align-items-center">
                                     <a href="/products/{{item[0]}}"><img alt="{{item[6]}}" src="{{ url_for('static', filename='products/' + item[6]) }}" width="80"> </a>
                                     <div class="cart-title text-start ms-3">
-                                        <a class="text-body text-decoration-none" href="/products/{{item[0]}}"><strong>{{item[1]}}</strong>
+                                        <a class="text-body text-decoration-none" href="/products/{{item[0]}}"><strong class="product-name">{{item[1]}}</strong>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="mt-4 mt-md-0 col-md-7 col-12">
+                            <div class="mt-4 mt-md-0 col-md-7 col-12 product-price-section">
                                 <div class="align-items-center row">
                                     <div class="col-md-3 price-per-item-section">
                                         <div class="row">
@@ -50,7 +50,7 @@
                                         </div>
                                     </div>
                                     <div class="d-none d-md-block text-center col-2">
-                                        <a role="button" class="cart-remove text-muted btn"><i class="bi bi-x"></i>
+                                        <a role="button" class="remove-from-cart text-muted btn" data-id="{{item[0]}}"><i class="bi bi-x"></i>
                                         </a>
                                     </div>
                                 </div>
