--- a/templates/cart.html
+++ b/templates/cart.html
@@ -99,7 +99,7 @@
                         <tbody>
                             <tr>
                                 <th class="py-4">Order Subtotal </th>
-                                <td class="py-4 text-end text-muted">₹<label class="cart-subtotal">0</label></td>
+                                <td class="py-4 text-end text-muted">₹<label class="cart-subtotal">{{cart_total}}</label></td>
                             </tr>
                             <tr>
                                 <th class="py-4">Shipping and handling</th>
@@ -111,7 +111,7 @@
                             </tr>
                             <tr>
                                 <th class="pt-4 border-0">Total</th>
-                                <td class="pt-4 border-0 text-end h3 fw-normal">₹<label class="cart-total">0</label></td>
+                                <td class="pt-4 border-0 text-end h3 fw-normal">₹<label class="cart-total">{{cart_total + 10}}</label></td>
                             </tr>
                         </tbody>
                     </table>
